:sparkles: +objectives layer

--- a/src/i18n/i18n-de.json
+++ b/src/i18n/i18n-de.json
@@ -12,7 +12,8 @@
 			"landmark_icon": "Sehenswürdigkeiten",
 			"vista_icon": "Vista",
 			"jumpingpuzzle_icon": "Sprungrätsel",
-			"polylines": "Polylinien"
+			"polylines": "Polylinien",
+			"objectives": "Ziele"
 		}
 	}
 }
