:sparkles: +sentry icons

--- a/src/i18n/i18n-de.json
+++ b/src/i18n/i18n-de.json
@@ -13,7 +13,8 @@
 			"vista_icon": "Vista",
 			"jumpingpuzzle_icon": "Sprungrätsel",
 			"polylines": "Polylinien",
-			"objectives": "Ziele"
+			"objective_icon": "Ziele",
+			"sentry_icon": "Wachen"
 		}
 	}
 }
