--- a/src/i18n/i18n-en.json
+++ b/src/i18n/i18n-en.json
@@ -13,7 +13,8 @@
 			"vista_icon": "Vistas",
 			"jumpingpuzzle_icon": "Jumping Puzzles",
 			"polylines": "Polylines",
-			"objectives": "Objectives"
+			"objective_icon": "Objectives",
+			"sentry_icon": "Sentries"
 		}
 	}
 }
