:sparkles: +wvw boss icons

--- a/src/i18n/i18n-de.json
+++ b/src/i18n/i18n-de.json
@@ -14,7 +14,8 @@
 			"jumpingpuzzle_icon": "Sprungrätsel",
 			"polylines": "Polylinien",
 			"objective_icon": "Ziele",
-			"sentry_icon": "Wachen"
+			"sentry_icon": "Wachen",
+			"wvw_boss_icon": "Bosse"
 		}
 	}
 }
