--- a/src/i18n/i18n-en.json
+++ b/src/i18n/i18n-en.json
@@ -14,7 +14,8 @@
 			"jumpingpuzzle_icon": "Jumping Puzzles",
 			"polylines": "Polylines",
 			"objective_icon": "Objectives",
-			"sentry_icon": "Sentries"
+			"sentry_icon": "Sentries",
+			"wvw_boss_icon": "Bosses"
 		}
 	}
 }
